--- a/index.html
+++ b/index.html
@@ -1,1 +1,44 @@
-<p>Creed Goff</p>
+<!DOCTYPE html>
+
+<html>
+   <head>
+      <title>CG Geo Example</title>
+   </head>
+
+   <body>
+   
+		<h1>Geological Exploration</h1>
+		
+		<main>
+			<h2>Basic Geological Exploration Methods</h2>
+			<article>
+				<h3>Field Mapping</h3>
+			</article>
+			
+			<article>
+				<h3>Satellite Surveys</h3>
+			</article>
+			
+			<article>
+				<h3>Core Drilling</h3>
+			</article>
+			
+			<article>
+				<h3>Geophysical Surveys</h3>
+			</article>
+			
+			<article>
+				<h3>Geochemical Sampling</h3>
+			</article>
+			
+			<article>
+				<h3>Geological Modeling and Simulations</h3>
+			</article>
+			
+		</main>
+		<footer>
+			<p>Author: Creed Goff</p>
+			<p><a href="mailto:creedgoff@gmail.com">creedgoff@gmail.com</a></p>
+		</footer>
+   </body>
+</html>
