Small note regarding links to outside sources

--- a/index.html
+++ b/index.html
@@ -47,6 +47,7 @@
 				such as the strike and dip of rock, fossils encountered in rock, or notable features of a particular
 				unit such as reactions to hydrochloric acid will be recorded.</p>
 				<h4>Common Field Methods</h4>
+				<h6>All photos throughout link to useful introductory resources on the topic for further research</h6>
 				<ul class = "examples">
 					<li>
 						<a href="https://www.usgs.gov/core-science-systems/national-cooperative-geologic-mapping-program/science/introduction-geologic?qt-science_center_objects=0#qt-science_center_objects" target="_blank">
